	PR preprocessor/57824 	* lex.c (lex_raw_string): Allow reading new-lines if 	in_deferred_pragma or if parsing_args and there is still 	data in the current buffer.

* c-c++-common/raw-string-17.c: New test.
	* c-c++-common/gomp/pr57824.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@200879 138bc75d-0d04-0410-961f-82ee72b054a4